模块拆除。 等待书籍服务api实现。